styles/index.css
/* ... */
.header__navbar--light .header__logo {
  border-color: #ebebf0;
}

.header__navigation-list {
  display: flex;
  column-gap: clamp(17px, -43px + 5vw, 53px);
  flex-basis: 100%;
  flex-wrap: nowrap;
  height: 100%;
  align-items: center;
}

.header__navigation-item {
  display: flex;
  align-items: center;
  height: 100%;
}

.header__navigation-link {
  display: flex;
  align-items: center;
  position: relative;
  text-decoration: none;
  color: inherit;
  white-space: nowrap;
  height: 100%;
}

.header__navigation-link::after {
  content: '';
  position: absolute;
  width: 0;
  height: 1px;
  background-color: #5c8ee6;
  bottom: 0;
  right: 0;
  left: auto;
  transition: 0.3s;
}

.header__navigation-link:hover::after {
  width: 100%;
  right: auto;
  left: 0;
}

.header__contacts {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  column-gap: 0.625rem;
  transition: color 0.3s;
}

.header__contacts:hover {
  color: #5c8ee5;
}

.header__contacts-icon {
  color: #5c8ee6;
}

.header__nav-button .header__contacts-icon {
  display: none;
}

.header__contacts-link {
  color: inherit;
  text-decoration: none;
}

.logo__image {
  width: 9rem;
  height: 2.75rem;
}

.logo__svg--dark {
  display: none;
}

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  border: none;
  background-color: #5c8ee5;
  color: inherit;
  font-size: 1rem;
  line-height: 1.6;
  padding: 25px 54px;
  text-decoration: none;
  color: #fff;
  cursor: pointer;
  font-weight: 600;
  transition: background-color 0.3s;
}

.button--cta {
  padding: 1.125rem 2.8125rem;
}

.button-modal {
  width: 100%;
}

.button:hover {
  background-color: #4a79cc;
}

.header__nav-button {
  height: 100%;
}

.header__button {
  padding: 25px 56px;
  letter-spacing: 0.5008px;
}

.burger-button {
  width: 100px;
  height: 100%;
  gap: 0.9375rem;
  display: none;
  justify-content: space-between;
  flex-direction: column;
  padding: 1.8rem;
  background-color: transparent;
  border: none;
  border-right: 1px solid rgba(235, 235, 240, 0.2);
}

.burger-button__wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 15px;
  width: 100%;
}

.burger-button__line {
  height: 1px;
  width: 100%;
  background-color: #fff;
  transition: transform 0.3s;
}

.burger-button__line:nth-child(2) {
  width: 80%;
  height: 1px;
}

.separator {
  width: 9.375rem;
  height: 2px;
  margin-block-end: 23px;
  background-color: #5c8ee5;
}

.header__content {
  position: relative;
  z-index: 1;
  padding-top: 15.1875rem;
  color: #fff;
  margin-block-end: 6.25rem;
  padding-inline: 0;
}

.header__title {
  max-width: 67.5rem;
  font-family: 'Bebas Neue';
  font-weight: 400;
  font-size: clamp(3rem, 2.5146rem + 2.0712vw, 5rem);
  line-height: 1.2;
  margin-block-end: 2.4375rem;
}

.header__text {
  max-width: 720px;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.6;
  margin-block-end: 3.125rem;
  word-spacing: 1.2px;
}

.header__features-list {
  position: relative;
  z-index: 1;
  color: #fff;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.6;
}

.swiper {
  max-width: 1440px;
  margin-inline: auto;
}

.swiper-wrapper {
  display: flex;
}

.header__features-item {
  display: flex;
  flex-direction: column;
  row-gap: 1.25rem;
  padding: 30px 50px;
  border: 1px solid rgba(235, 235, 240, 0.2);
  max-width: 288px;
  height: auto;
}

.slider__buttons {
  display: none;
  height: 44px;
}

.slider-button-prev,
.slider-button-next {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  flex-basis: 50%;
  border: 1px solid rgba(235, 235, 240, 0.2);
  cursor: pointer;
}

.header__features-item:not(:last-child) {
  border-right: none;
}

.section--light {
  background-color: #fff;
}

.section {
  padding-inline: 15px;
  margin-block-end: 148px;
}

.section:last-child {
  margin-block-end: 0;
}

.section__title {
  font-family: 'Bebas Neue';
  font-weight: 400;
  font-size: 60px;
  line-height: 1.2;
  color: #292d33;
  margin-block-end: 54px;
}

.steps__title {
  font-weight: 400;
  font-size: 28px;
  line-height: 1.6;
  margin-block-end: 10px;
  color: #292d33;
}

.steps__list {
  display: flex;
  column-gap: 1.875rem;
  list-style: none;
  overflow: hidden;
}

.steps__item {
  max-width: 330px;
}

.steps__content {
  padding-right: 32px;
}

.steps__num {
  display: flex;
  align-items: center;
  column-gap: 30px;
  margin-block-end: 36px;
  font-family: 'Bebas Neue';
  font-size: 48px;
  line-height: 1.2;
  color: #5c8ee5;
}

.steps__num::after {
  content: '';
  width: 100%;
  height: 1px;
  background-color: #ebebf0;
}

.steps__text {
  font-size: 16px;
  line-height: 1.6;
  color: #828a99;
}

.button__link--steps {
  margin-block-start: 1.25rem;
}

.button__link {
  display: flex;
  align-items: center;
  column-gap: 1.5rem;
  text-decoration: none;
  font-weight: 600;
  font-size: 16px;
  color: #5c8ee5;
  line-height: 1.6;
}

.button__link::before {
  content: '';
  width: 40px;
  height: 1px;
  background-color: #5c8ee5;
  transition: width 0.3s;
}

.button__link:hover::before {
  width: 60px;
}

.mobile__overlay {
  display: none;
}

.mobile__overlay.is-open {
  display: block;
}

body.is-lock {
  overflow: hidden;
}

.mobile__menu-item {
  font-weight: 700;
  font-size: 14px;
  line-height: 1.6;
  color: #292d33;
  margin-block-end: 30px;
}

.mobile__menu-link {
  color: inherit;
  text-decoration: none;
}

.mobile__submenu-list {
  display: flex;
  flex-direction: column;
  padding-inline: 20px;
  row-gap: 10px;
  margin-block-start: 20px;
}

.mobile__submenu-item {
  font-weight: 400;
  color: #828a99;
}

.mobile__submenu-link {
  color: inherit;
  text-decoration: none;
}

.contacts__phone {
  font-weight: 600;
  font-size: 20px;
  line-height: 1.6;
  color: #292d33;
}

.divider-line {
  margin: 0;
  width: 100%;
  height: 0.0625rem;
  border-top: 1px solid #ebebf0;
  pointer-events: none;
}
/* ... */

